// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Select multiple languages as required",
        "value": null,
      },
      Object {
        "text": "Afrikaans",
        "value": "afr",
      },
      Object {
        "text": "Albanian",
        "value": "alb",
      },
      Object {
        "text": "Arabic",
        "value": "ara",
      },
      Object {
        "text": "Australian Indigenous",
        "value": "aus",
      },
      Object {
        "text": "Bosnian",
        "value": "bos",
      },
      Object {
        "text": "Catalan",
        "value": "cat",
      },
      Object {
        "text": "Chinese",
        "value": "chi",
      },
      Object {
        "text": "Coptic",
        "value": "cop",
      },
      Object {
        "text": "Czech",
        "value": "cze",
      },
      Object {
        "text": "Danish",
        "value": "dan",
      },
      Object {
        "text": "Dutch",
        "value": "dut",
      },
      Object {
        "text": "Egyptian (Ancient)",
        "value": "egy",
      },
      Object {
        "text": "Elamite",
        "value": "elx",
      },
      Object {
        "text": "English",
        "value": "eng",
      },
      Object {
        "text": "English (Ancient)",
        "value": "enm",
      },
      Object {
        "text": "Esperanto",
        "value": "epo",
      },
      Object {
        "text": "Estonian",
        "value": "est",
      },
      Object {
        "text": "Finnish",
        "value": "fin",
      },
      Object {
        "text": "French",
        "value": "fre",
      },
      Object {
        "text": "German",
        "value": "ger",
      },
      Object {
        "text": "Germanic",
        "value": "gem",
      },
      Object {
        "text": "Greek (Ancient)",
        "value": "grc",
      },
      Object {
        "text": "Greek",
        "value": "gre",
      },
      Object {
        "text": "Hebrew",
        "value": "heb",
      },
      Object {
        "text": "Croatian",
        "value": "hrv",
      },
      Object {
        "text": "Hungarian",
        "value": "hun",
      },
      Object {
        "text": "Indonesian",
        "value": "ind",
      },
      Object {
        "text": "Iranian",
        "value": "ira",
      },
      Object {
        "text": "Italian",
        "value": "ita",
      },
      Object {
        "text": "Japanese",
        "value": "jpn",
      },
      Object {
        "text": "Korean",
        "value": "kor",
      },
      Object {
        "text": "Lao",
        "value": "lao",
      },
      Object {
        "text": "Latin",
        "value": "lat",
      },
      Object {
        "text": "Latvian",
        "value": "lav",
      },
      Object {
        "text": "Lithuanian",
        "value": "lit",
      },
      Object {
        "text": "Macedonian",
        "value": "mac",
      },
      Object {
        "text": "Malayalam",
        "value": "mal",
      },
      Object {
        "text": "Malay",
        "value": "may",
      },
      Object {
        "text": "Mongolian",
        "value": "mon",
      },
      Object {
        "text": "Nahuatl",
        "value": "nah",
      },
      Object {
        "text": "Norwegian",
        "value": "nor",
      },
      Object {
        "text": "Turkish (Ottoman)",
        "value": "ota",
      },
      Object {
        "text": "Papuan",
        "value": "paa",
      },
      Object {
        "text": "Persian",
        "value": "per",
      },
      Object {
        "text": "Polish",
        "value": "pol",
      },
      Object {
        "text": "Portuguese",
        "value": "por",
      },
      Object {
        "text": "Romanian",
        "value": "rum",
      },
      Object {
        "text": "Russian",
        "value": "rus",
      },
      Object {
        "text": "Slovak",
        "value": "slo",
      },
      Object {
        "text": "Slovenian",
        "value": "slv",
      },
      Object {
        "text": "Spanish",
        "value": "spa",
      },
      Object {
        "text": "Serbian",
        "value": "srp",
      },
      Object {
        "text": "Swedish",
        "value": "swe",
      },
      Object {
        "text": "Classical Syriac",
        "value": "syc",
      },
      Object {
        "text": "Syriac",
        "value": "syr",
      },
      Object {
        "text": "Tetum",
        "value": "tet",
      },
      Object {
        "text": "Thai",
        "value": "tha",
      },
      Object {
        "text": "Turkish",
        "value": "tur",
      },
      Object {
        "text": "Ukrainian",
        "value": "ukr",
      },
      Object {
        "text": "Vietnamese",
        "value": "vie",
      },
      Object {
        "text": "Waray",
        "value": "war",
      },
      Object {
        "text": "Yiddish",
        "value": "yid",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  selectedValue={Array []}
/>
`;

exports[`LanguageField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Select multiple languages as required",
        "value": null,
      },
      Object {
        "text": "Afrikaans",
        "value": "afr",
      },
      Object {
        "text": "Albanian",
        "value": "alb",
      },
      Object {
        "text": "Arabic",
        "value": "ara",
      },
      Object {
        "text": "Australian Indigenous",
        "value": "aus",
      },
      Object {
        "text": "Bosnian",
        "value": "bos",
      },
      Object {
        "text": "Catalan",
        "value": "cat",
      },
      Object {
        "text": "Chinese",
        "value": "chi",
      },
      Object {
        "text": "Coptic",
        "value": "cop",
      },
      Object {
        "text": "Czech",
        "value": "cze",
      },
      Object {
        "text": "Danish",
        "value": "dan",
      },
      Object {
        "text": "Dutch",
        "value": "dut",
      },
      Object {
        "text": "Egyptian (Ancient)",
        "value": "egy",
      },
      Object {
        "text": "Elamite",
        "value": "elx",
      },
      Object {
        "text": "English",
        "value": "eng",
      },
      Object {
        "text": "English (Ancient)",
        "value": "enm",
      },
      Object {
        "text": "Esperanto",
        "value": "epo",
      },
      Object {
        "text": "Estonian",
        "value": "est",
      },
      Object {
        "text": "Finnish",
        "value": "fin",
      },
      Object {
        "text": "French",
        "value": "fre",
      },
      Object {
        "text": "German",
        "value": "ger",
      },
      Object {
        "text": "Germanic",
        "value": "gem",
      },
      Object {
        "text": "Greek (Ancient)",
        "value": "grc",
      },
      Object {
        "text": "Greek",
        "value": "gre",
      },
      Object {
        "text": "Hebrew",
        "value": "heb",
      },
      Object {
        "text": "Croatian",
        "value": "hrv",
      },
      Object {
        "text": "Hungarian",
        "value": "hun",
      },
      Object {
        "text": "Indonesian",
        "value": "ind",
      },
      Object {
        "text": "Iranian",
        "value": "ira",
      },
      Object {
        "text": "Italian",
        "value": "ita",
      },
      Object {
        "text": "Japanese",
        "value": "jpn",
      },
      Object {
        "text": "Korean",
        "value": "kor",
      },
      Object {
        "text": "Lao",
        "value": "lao",
      },
      Object {
        "text": "Latin",
        "value": "lat",
      },
      Object {
        "text": "Latvian",
        "value": "lav",
      },
      Object {
        "text": "Lithuanian",
        "value": "lit",
      },
      Object {
        "text": "Macedonian",
        "value": "mac",
      },
      Object {
        "text": "Malayalam",
        "value": "mal",
      },
      Object {
        "text": "Malay",
        "value": "may",
      },
      Object {
        "text": "Mongolian",
        "value": "mon",
      },
      Object {
        "text": "Nahuatl",
        "value": "nah",
      },
      Object {
        "text": "Norwegian",
        "value": "nor",
      },
      Object {
        "text": "Turkish (Ottoman)",
        "value": "ota",
      },
      Object {
        "text": "Papuan",
        "value": "paa",
      },
      Object {
        "text": "Persian",
        "value": "per",
      },
      Object {
        "text": "Polish",
        "value": "pol",
      },
      Object {
        "text": "Portuguese",
        "value": "por",
      },
      Object {
        "text": "Romanian",
        "value": "rum",
      },
      Object {
        "text": "Russian",
        "value": "rus",
      },
      Object {
        "text": "Slovak",
        "value": "slo",
      },
      Object {
        "text": "Slovenian",
        "value": "slv",
      },
      Object {
        "text": "Spanish",
        "value": "spa",
      },
      Object {
        "text": "Serbian",
        "value": "srp",
      },
      Object {
        "text": "Swedish",
        "value": "swe",
      },
      Object {
        "text": "Classical Syriac",
        "value": "syc",
      },
      Object {
        "text": "Syriac",
        "value": "syr",
      },
      Object {
        "text": "Tetum",
        "value": "tet",
      },
      Object {
        "text": "Thai",
        "value": "tha",
      },
      Object {
        "text": "Turkish",
        "value": "tur",
      },
      Object {
        "text": "Ukrainian",
        "value": "ukr",
      },
      Object {
        "text": "Vietnamese",
        "value": "vie",
      },
      Object {
        "text": "Waray",
        "value": "war",
      },
      Object {
        "text": "Yiddish",
        "value": "yid",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`LanguageField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Select multiple languages as required",
        "value": null,
      },
      Object {
        "text": "Afrikaans",
        "value": "afr",
      },
      Object {
        "text": "Albanian",
        "value": "alb",
      },
      Object {
        "text": "Arabic",
        "value": "ara",
      },
      Object {
        "text": "Australian Indigenous",
        "value": "aus",
      },
      Object {
        "text": "Bosnian",
        "value": "bos",
      },
      Object {
        "text": "Catalan",
        "value": "cat",
      },
      Object {
        "text": "Chinese",
        "value": "chi",
      },
      Object {
        "text": "Coptic",
        "value": "cop",
      },
      Object {
        "text": "Czech",
        "value": "cze",
      },
      Object {
        "text": "Danish",
        "value": "dan",
      },
      Object {
        "text": "Dutch",
        "value": "dut",
      },
      Object {
        "text": "Egyptian (Ancient)",
        "value": "egy",
      },
      Object {
        "text": "Elamite",
        "value": "elx",
      },
      Object {
        "text": "English",
        "value": "eng",
      },
      Object {
        "text": "English (Ancient)",
        "value": "enm",
      },
      Object {
        "text": "Esperanto",
        "value": "epo",
      },
      Object {
        "text": "Estonian",
        "value": "est",
      },
      Object {
        "text": "Finnish",
        "value": "fin",
      },
      Object {
        "text": "French",
        "value": "fre",
      },
      Object {
        "text": "German",
        "value": "ger",
      },
      Object {
        "text": "Germanic",
        "value": "gem",
      },
      Object {
        "text": "Greek (Ancient)",
        "value": "grc",
      },
      Object {
        "text": "Greek",
        "value": "gre",
      },
      Object {
        "text": "Hebrew",
        "value": "heb",
      },
      Object {
        "text": "Croatian",
        "value": "hrv",
      },
      Object {
        "text": "Hungarian",
        "value": "hun",
      },
      Object {
        "text": "Indonesian",
        "value": "ind",
      },
      Object {
        "text": "Iranian",
        "value": "ira",
      },
      Object {
        "text": "Italian",
        "value": "ita",
      },
      Object {
        "text": "Japanese",
        "value": "jpn",
      },
      Object {
        "text": "Korean",
        "value": "kor",
      },
      Object {
        "text": "Lao",
        "value": "lao",
      },
      Object {
        "text": "Latin",
        "value": "lat",
      },
      Object {
        "text": "Latvian",
        "value": "lav",
      },
      Object {
        "text": "Lithuanian",
        "value": "lit",
      },
      Object {
        "text": "Macedonian",
        "value": "mac",
      },
      Object {
        "text": "Malayalam",
        "value": "mal",
      },
      Object {
        "text": "Malay",
        "value": "may",
      },
      Object {
        "text": "Mongolian",
        "value": "mon",
      },
      Object {
        "text": "Nahuatl",
        "value": "nah",
      },
      Object {
        "text": "Norwegian",
        "value": "nor",
      },
      Object {
        "text": "Turkish (Ottoman)",
        "value": "ota",
      },
      Object {
        "text": "Papuan",
        "value": "paa",
      },
      Object {
        "text": "Persian",
        "value": "per",
      },
      Object {
        "text": "Polish",
        "value": "pol",
      },
      Object {
        "text": "Portuguese",
        "value": "por",
      },
      Object {
        "text": "Romanian",
        "value": "rum",
      },
      Object {
        "text": "Russian",
        "value": "rus",
      },
      Object {
        "text": "Slovak",
        "value": "slo",
      },
      Object {
        "text": "Slovenian",
        "value": "slv",
      },
      Object {
        "text": "Spanish",
        "value": "spa",
      },
      Object {
        "text": "Serbian",
        "value": "srp",
      },
      Object {
        "text": "Swedish",
        "value": "swe",
      },
      Object {
        "text": "Classical Syriac",
        "value": "syc",
      },
      Object {
        "text": "Syriac",
        "value": "syr",
      },
      Object {
        "text": "Tetum",
        "value": "tet",
      },
      Object {
        "text": "Thai",
        "value": "tha",
      },
      Object {
        "text": "Turkish",
        "value": "tur",
      },
      Object {
        "text": "Ukrainian",
        "value": "ukr",
      },
      Object {
        "text": "Vietnamese",
        "value": "vie",
      },
      Object {
        "text": "Waray",
        "value": "war",
      },
      Object {
        "text": "Yiddish",
        "value": "yid",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
